--- a/tutorial.html
+++ b/tutorial.html
@@ -93,11 +93,11 @@
     setInterval(draw, 33);
     
     document.getElementById('military-btn').addEventListener('click', () => {
-        alert('Details about military build...');
+        alert('Uploading...');
     });
 
     document.getElementById('city-btn').addEventListener('click', () => {
-        alert('Details about city import...');
+        alert('Uploading...');
     });
 </script>
 
