--- a/tutorial.html
+++ b/tutorial.html
@@ -66,7 +66,7 @@
 <div id="city-content" class="content" style="display: none;">
     <h2>City Import</h2>
     <p>Details about city import...</p>
-    <img src="image1.jpg" alt="City Image 1">
+    <img src="https://i.ibb.co/9pR3chG/IMG-20240605-200409.jpg" alt="Step 1">
     <img src="image2.jpg" alt="City Image 2">
 </div>
 
