--- a/tutorial.html
+++ b/tutorial.html
@@ -67,7 +67,10 @@
     <h2>City Import</h2>
     <p>Details about city import...</p>
     <img src="https://i.ibb.co/9pR3chG/IMG-20240605-200409.jpg" alt="Step 1">
-    <img src="image2.jpg" alt="City Image 2">
+    <img src="https://i.ibb.co/2qXrSx3/IMG-20240605-200629.jpg" alt="Step 2">
+    <img src="https://i.ibb.co/2qXrSx3/IMG-20240605-200629.jpg" alt="Step 3">
+    <img src="https://i.ibb.co/2qXrSx3/IMG-20240605-200629.jpg" alt="Step 4">
+    <img src="https://i.ibb.co/2qXrSx3/IMG-20240605-200629.jpg" alt="Step 5">
 </div>
 
 <script>
