--- a/tutorial.html
+++ b/tutorial.html
@@ -113,7 +113,7 @@
     setInterval(draw, 33);
     
     document.getElementById('military-btn').addEventListener('click', () => {
-        alert('Details about military build...');
+        alert('Uploading...');
     });
 
     document.getElementById('city-btn').addEventListener('click', () => {
